[sdg11] generating automatically
* [basic] fixing typo
* [build] fix osm2pgrouting configuration files
* [basic] start-after using 1 |
* [sdg11] Exercise_N.txt -> exercise_n.txt
* [lint] removing unused files
* [build] adding a downloads empty folder
* [build] data saved on dowmloads folder
* [build] xml files configuration

--- a/docs/scripts/un_sdg/CMakeLists.txt
+++ b/docs/scripts/un_sdg/CMakeLists.txt
@@ -10,6 +10,8 @@ foreach (f ${PGR_WORKSHOP_FILES})
         message(STATUS "    Adding file ${f}")
     endif()
     configure_file(${f} sdg3/${f})
+    configure_file(${f} sdg7/${f})
+    configure_file(${f} sdg11/${f})
 endforeach()
 
 
@@ -18,7 +20,7 @@ add_custom_target(un_scripts ALL)
 
 add_subdirectory(sdg3)
 add_dependencies(un_scripts un_sdg3_scripts)
-add_subdirectory(sdg11)
-add_dependencies(un_scripts un_sdg11_scripts)
 add_subdirectory(sdg7)
 add_dependencies(un_scripts un_sdg7_scripts)
+add_subdirectory(sdg11)
+add_dependencies(un_scripts un_sdg11_scripts)
