[CI] fixing action that updates locale

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -104,6 +104,7 @@ jobs:
           for line in `cat build/docs/locale_changes.txt`; do git add "$line"; done
           git diff --staged --quiet || git commit -m "Update locale: commit ${{ env.GIT_HASH }}"
           git fetch origin
+          git status
           git rebase origin/${{ env.BRANCH }}
           git push origin ${{ env.BRANCH }}
 
