dont generate locale on un-challenge

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -91,6 +91,7 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Update locale
+        if: github.ref == 'refs/heads/develop'
         run: |
           # List all the files that needs to be committed in build/docs/locale_changes.txt
           awk '/^Update|^Create/{print $2}' build/docs/locale_changes.txt > tmp && mv tmp build/docs/locale_changes.txt        # .po files
