--- a/.github/workflows/locale-and-website.yml
+++ b/.github/workflows/locale-and-website.yml
@@ -113,8 +113,8 @@ jobs:
         run: |
           if [[ "${{ env.BRANCH }}" == "develop" ]]; then
             FOLDER_NAME="dev"
-          elif [[ "${{ env.BRANCH }}" == "un-challenge" ]]; then
-            FOLDER_NAME="un-challenge"
+          elif [[ "${{ env.BRANCH }}" == "main" ]]; then
+            FOLDER_NAME="2.7"
           fi
           git checkout -f origin/gh-pages
           git checkout -b gh-pages
