--- a/.tx/config
+++ b/.tx/config
@@ -1,118 +1,159 @@
 [main]
 host = https://www.transifex.com
-type = PO
 
-[pgrouting-workshop.locale-en-lc-messages-index-po--develop]
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-advanced-chapter-12-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/advanced/chapter-12.po
+source_file = locale/pot/advanced/chapter-12.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-appendix-appendix-2-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/appendix/appendix-2.po
+source_file = locale/pot/appendix/appendix-2.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-appendix-appendix-3-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/appendix/appendix-3.po
+source_file = locale/pot/appendix/appendix-3.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-appendix-appendix-4-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/appendix/appendix-4.po
+source_file = locale/pot/appendix/appendix-4.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-basic-appendix-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/basic/appendix.po
+source_file = locale/pot/basic/appendix.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-basic-data-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/basic/data.po
+source_file = locale/pot/basic/data.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-basic-pedestrian-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/basic/pedestrian.po
+source_file = locale/pot/basic/pedestrian.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-basic-plpgsql-function-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/basic/plpgsql_function.po
+source_file = locale/pot/basic/plpgsql_function.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-basic-sql-function-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/basic/sql_function.po
+source_file = locale/pot/basic/sql_function.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-basic-vehicle-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/basic/vehicle.po
+source_file = locale/pot/basic/vehicle.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-examples-boost-dijkstra-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/examples/boost_dijkstra.po
+source_file = locale/pot/examples/boost_dijkstra.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-examples-hanoslav-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/examples/hanoslav.po
+source_file = locale/pot/examples/hanoslav.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-examples-wiki-example-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/examples/wiki_example.po
+source_file = locale/pot/examples/wiki_example.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-general-intro-chapter-1-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/general-intro/chapter-1.po
+source_file = locale/pot/general-intro/chapter-1.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-general-intro-chapter-2-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/general-intro/chapter-2.po
+source_file = locale/pot/general-intro/chapter-2.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-general-intro-chapter-3-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/general-intro/chapter-3.po
+source_file = locale/pot/general-intro/chapter-3.pot
+source_lang = en
+type        = PO
+
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-index-po--develop]
 file_filter = locale/<lang>/LC_MESSAGES/index.po
 source_file = locale/pot/index.pot
 source_lang = en
-type = PO
+type        = PO
 
-[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-1-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-1.po
-source_file = locale/pot/chapters/appendix-1.pot
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-interactions-chapter-10-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/interactions/chapter-10.po
+source_file = locale/pot/interactions/chapter-10.pot
 source_lang = en
-type = PO
+type        = PO
 
-[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-2-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-2.po
-source_file = locale/pot/chapters/appendix-2.pot
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-interactions-chapter-11-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/interactions/chapter-11.po
+source_file = locale/pot/interactions/chapter-11.pot
 source_lang = en
-type = PO
+type        = PO
 
-[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-3-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-3.po
-source_file = locale/pot/chapters/appendix-3.pot
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-interactions-chapter-9-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/interactions/chapter-9.po
+source_file = locale/pot/interactions/chapter-9.pot
 source_lang = en
-type = PO
+type        = PO
 
-[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-4-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-4.po
-source_file = locale/pot/chapters/appendix-4.pot
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-un-sdg-appendix-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/un-sdg/appendix.po
+source_file = locale/pot/un-sdg/appendix.pot
 source_lang = en
-type = PO
+type        = PO
 
-[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-5-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-5.po
-source_file = locale/pot/chapters/appendix-5.pot
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-un-sdg-data-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/un-sdg/data.po
+source_file = locale/pot/un-sdg/data.pot
 source_lang = en
-type = PO
+type        = PO
 
-[pgrouting-workshop.locale-en-lc-messages-chapters-appendix-6-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-6.po
-source_file = locale/pot/chapters/appendix-6.pot
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-un-sdg-introduction-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/un-sdg/introduction.po
+source_file = locale/pot/un-sdg/introduction.pot
 source_lang = en
-type = PO
+type        = PO
 
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-1-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-1.po
-source_file = locale/pot/chapters/chapter-1.pot
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-un-sdg-sdg11-cities-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/un-sdg/sdg11-cities.po
+source_file = locale/pot/un-sdg/sdg11-cities.pot
 source_lang = en
-type = PO
+type        = PO
 
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-10-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-10.po
-source_file = locale/pot/chapters/chapter-10.pot
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-un-sdg-sdg3-health-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/un-sdg/sdg3-health.po
+source_file = locale/pot/un-sdg/sdg3-health.pot
 source_lang = en
-type = PO
+type        = PO
 
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-11-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-11.po
-source_file = locale/pot/chapters/chapter-11.pot
+[o:pgrouting:p:pgrouting-workshop:r:locale-en-lc-messages-un-sdg-sdg7-energy-po--develop]
+file_filter = locale/<lang>/LC_MESSAGES/un-sdg/sdg7-energy.po
+source_file = locale/pot/un-sdg/sdg7-energy.pot
 source_lang = en
-type = PO
-
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-12-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-12.po
-source_file = locale/pot/chapters/chapter-12.pot
-source_lang = en
-type = PO
-
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-2-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-2.po
-source_file = locale/pot/chapters/chapter-2.pot
-source_lang = en
-type = PO
-
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-3-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-3.po
-source_file = locale/pot/chapters/chapter-3.pot
-source_lang = en
-type = PO
-
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-4-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-4.po
-source_file = locale/pot/chapters/chapter-4.pot
-source_lang = en
-type = PO
-
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-5-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-5.po
-source_file = locale/pot/chapters/chapter-5.pot
-source_lang = en
-type = PO
-
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-6-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-6.po
-source_file = locale/pot/chapters/chapter-6.pot
-source_lang = en
-type = PO
-
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-7-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-7.po
-source_file = locale/pot/chapters/chapter-7.pot
-source_lang = en
-type = PO
-
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-8-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-8.po
-source_file = locale/pot/chapters/chapter-8.pot
-source_lang = en
-type = PO
-
-[pgrouting-workshop.locale-en-lc-messages-chapters-chapter-9-po--develop]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-9.po
-source_file = locale/pot/chapters/chapter-9.pot
-source_lang = en
-type = PO
+type        = PO
 
