--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ option(PGR_WORKSHOP_VERBOSE_DEBUG
 # CONFIGURATION
 #---------------------------------------------
 set(PGR_WORKSHOP_CITY "Prizren")
-set(PGR_WORKSHOP_CITY_FILE "Prizren-XK")
+set(PGR_WORKSHOP_CITY_FILE "Prizren_XK")
 set(PGR_WORKSHOP_CITY_BBOX "11.20,43.76,11.27,43.79")
 set(PGR_WORKSHOP_LITTLE_NET_BBOX "11.24,43.77,11.27,43.79")
 set(PGR_WORKSHOP_DOWNLOAD_DIR "workshop-2022")
