updating OSGeoLive chapter

--- a/docs/general-intro/CMakeLists.txt
+++ b/docs/general-intro/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 add_custom_target(general-intro ALL)
 
 #---------------------
@@ -6,28 +5,13 @@ add_custom_target(general-intro ALL)
 #---------------------
 set(PGR_WORKSHOP_FILES
   introduction.rst
-  chapter-2.rst
-  chapter-3.rst
+  overview.rst
+  osgeolive.rst
   )
-
-
-set(PGR_WORKSHOP_SUBDIRS
-  images
-  )
-
-
 
 #---------------------------------------------
 # Adding the documentation subdirectories & files
 #---------------------------------------------
-
-foreach (dir ${PGR_WORKSHOP_SUBDIRS})
-  if (PGR_WORKSHOP_DEBUG)
-    message(STATUS "   Adding directory ${dir}")
-  endif()
-  add_subdirectory(${dir})
-endforeach()
-
 foreach (f ${PGR_WORKSHOP_FILES})
   if (PGR_WORKSHOP_VERBOSE_DEBUG)
     message(STATUS "    Adding file ${f}")
