--- a/docs/scripts/get_data/CMakeLists.txt
+++ b/docs/scripts/get_data/CMakeLists.txt
@@ -4,7 +4,7 @@
 set(PGR_WORKSHOP_FILES
   get_bangladesh_data.sh
   get_mumbai_data.sh
-  get_osgeolive_data.sh
+  osgeolive_data.sh
   process_osgeolive_data.sh
 )
 
@@ -23,9 +23,9 @@ endforeach()
 if (NOT EXISTS ${CMAKE_SOURCE_DIR}/downloads/${PGR_WORKSHOP_CITY_FILE}.osm)
 execute_process(
   OUTPUT_FILE ${CMAKE_SOURCE_DIR}/downloads/${PGR_WORKSHOP_CITY_FILE}.osm
-  COMMAND bash ${CMAKE_CURRENT_BINARY_DIR}/get_osgeolive_data.sh
+  COMMAND bash ${CMAKE_CURRENT_BINARY_DIR}/osgeolive_data.sh
   WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/downloads
-  INPUT_FILE  ${CMAKE_CURRENT_BINARY_DIR}/get_osgeolive_data.sh
+  INPUT_FILE  ${CMAKE_CURRENT_BINARY_DIR}/osgeolive_data.sh
   )
 endif()
 configure_file(${CMAKE_SOURCE_DIR}/downloads/${PGR_WORKSHOP_CITY_FILE}.osm ${PGR_WORKSHOP_CITY_FILE}.osm)
