[CI] updating actions

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Get postgres version
         run: |
@@ -28,7 +28,7 @@ jobs:
             $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
 
       - name: Install python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
@@ -59,7 +59,8 @@ jobs:
           mkdir -p  ~/Desktop/workshop-2019
           mkdir build
           cd build
-          cmake -DLINKCHECK=ON -DPGR_WORKSHOP_DEBUG=ON ..
+          cmake -DPGR_WORKSHOP_DEBUG=ON ..
+          psql -l
         env:
           POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
@@ -70,4 +71,4 @@ jobs:
       - name: Build
         run: |
           cd build
-          make -j 4
+          make html
