(build,CI) adjusting the requirements and build options

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -72,7 +72,7 @@ jobs:
           echo :5432:*:user:user >> .pgpass
           mkdir build
           cd build
-          cmake -DLOCALE=ON -DPGR_WORKSHOP=ON -DES=ON ..
+          cmake -DES=ON ..
         env:
           POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
